Add Ocean batch job contract
